syntax/tests/parsing/errors/typeDef/record.res
type observation = {
  observed: int,
  observer:
}
